 * Fixes bug in time period calculation for removing old OCSP response files.

 v2.1.6
 ----------------------------------------------------------------------------------------------------
 * Fixed issue #145 where a server restart was not done when recommended and checking
   becamed called in a tight loop, eventually calling message commands again and again.
   Test case added for this.
 * 'make test' will now trigger the build if not done before. removed some obsolete
   test special targets.
 * starting to integrate with travis for build and test coverage 
 * documented how MDCAChallenges now overrides any port sanity checks.

v2.1.5
----------------------------------------------------------------------------------------------------
 * fixed a crash when the server-status page was retrieved in text form (e.g. server-status?auto 
   url) and a MDomain had been renewed. Test case added. Fixes #141.
 * Test suite: rework on how httpd config is set up to allow for MDomain tests that use
   the base server and listen only on one port.

v2.1.4
----------------------------------------------------------------------------------------------------
 * added test case for #142 and fixed a bug in JSON array handling introduced in 2.1.3

v2.1.3
----------------------------------------------------------------------------------------------------
 * added more trace2 level logging in server-status collection to help issue #141
 * fixed the status handling to return job information from staging also when the certificate
   is not there yet.
 * fixed a bug in JSON handling that decremented refcounters wrongly when setting another
   JSON object at a key where none was allowed. Added test case.   
 * OCSP Stapling information in "server-status" is now sorted alphabetically.
 * add a CA column to Managed Domains table
 * urls are now displayed as links with the hostname or known name as text.
 * similary to ocsp status, certificate status 'ok' is now 'good'. Will turn to 'expired'