@@ -113,14 +113,19 @@ leave:
 }
 
 static apr_status_t job_loadj(md_json_t **pjson, md_store_group_t group, const char *name, 
-                              struct md_reg_t *reg, apr_pool_t *p)
+                              struct md_reg_t *reg, int with_log, apr_pool_t *p)
 {
+    apr_status_t rv;
+    
     md_store_t *store = md_reg_store_get(reg);
-    return md_store_load_json(store, group, name, MD_FN_JOB, pjson, p);
+    rv = md_store_load_json(store, group, name, MD_FN_JOB, pjson, p);
+    if (APR_SUCCESS == rv && !with_log) md_json_del(*pjson, MD_KEY_LOG, NULL);
+    return rv;
 }
 
-apr_status_t md_status_get_md_json(md_json_t **pjson, const md_t *md, 
-                                   md_reg_t *reg, md_ocsp_reg_t *ocsp, apr_pool_t *p)
+static apr_status_t status_get_md_json(md_json_t **pjson, const md_t *md, 
+                                       md_reg_t *reg, md_ocsp_reg_t *ocsp, 
+                                       int with_logs, apr_pool_t *p)
 {
     md_json_t *mdj, *jobj, *certj;
     int renew;
@@ -143,7 +148,7 @@ apr_status_t md_status_get_md_json(md_json_t **pjson, const md_t *md,
             }
             else if (!APR_STATUS_IS_ENOENT(rv)) goto leave;
             rv = APR_SUCCESS;
-            if (APR_SUCCESS == job_loadj(&jobj, MD_SG_OCSP, md->name, reg, p)) {
+            if (APR_SUCCESS == job_loadj(&jobj, MD_SG_OCSP, md->name, reg, with_logs, p)) {
                 md_json_setj(jobj, certj, MD_KEY_OCSP, MD_KEY_RENEWAL, NULL);
             }
         }
@@ -160,7 +165,7 @@ apr_status_t md_status_get_md_json(md_json_t **pjson, const md_t *md,
     renew = md_reg_should_renew(reg, md, p);
     if (renew) {
         md_json_setb(renew, mdj, MD_KEY_RENEW, NULL);
-        rv = job_loadj(&jobj, MD_SG_STAGING, md->name, reg, p);
+        rv = job_loadj(&jobj, MD_SG_STAGING, md->name, reg, with_logs, p);
         if (APR_SUCCESS == rv) {
             if (APR_SUCCESS == get_staging_cert_json(&certj, p, reg, md)) {
                 md_json_setj(certj, jobj, MD_KEY_CERT, NULL);
@@ -179,6 +184,12 @@ leave:
     return rv;
 }
 
+apr_status_t md_status_get_md_json(md_json_t **pjson, const md_t *md, 
+                                   md_reg_t *reg, md_ocsp_reg_t *ocsp, apr_pool_t *p)
+{
+    return status_get_md_json(pjson, md, reg, ocsp, 1, p);
+}
+
 apr_status_t md_status_get_json(md_json_t **pjson, apr_array_header_t *mds, 
                                 md_reg_t *reg, md_ocsp_reg_t *ocsp, apr_pool_t *p) 
 {
@@ -190,7 +201,7 @@ apr_status_t md_status_get_json(md_json_t **pjson, apr_array_header_t *mds,
     md_json_sets(MOD_MD_VERSION, json, MD_KEY_VERSION, NULL);
     for (i = 0; i < mds->nelts; ++i) {
         md = APR_ARRAY_IDX(mds, i, const md_t *);
-        md_status_get_md_json(&mdj, md, reg, ocsp, p);
+        status_get_md_json(&mdj, md, reg, ocsp, 0, p);
         md_json_addj(mdj, json, MD_KEY_MDS, NULL);
     }
     *pjson = json;
