@@ -1,5 +1,5 @@
 
-ServerName resistance.greenbytes.local
+ServerName icing
 ServerRoot "/Users/sei/projects/mod_md/test/gen/apache"
 DocumentRoot "/Users/sei/projects/mod_md/test/gen/apache/htdocs"
 
